--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 body{
     font-family: 'Poppins', sans-serif;
+    background-color: #EEEEEE;
  }
 
 header{ 
     display: flex;
     justify-content: center;
+    margin-bottom: 139px;
   }
 .header-main{
     display: flex;
@@ -29,6 +31,9 @@ header{
     color: #FFFFFF;
     border: none;
     border-radius: 5px;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: 400;
 }
 .fa-regular{
     margin-left: 10px;
@@ -47,4 +52,87 @@ header{
   }
  .header-banner img{
     width: 581px;
+ }
+ /* header styles ends here */
+ /* main blogs start here */
+ 
+ #main-blogs{
+     display: flex;
+     justify-content: center;
+     margin-bottom: 130px;
+ }
+ .all-cards{
+    display: flex;
+  }
+ .side-menu-card{
+    width: 312px;
+    height: 312px;
+    background-color: #161616;
+    margin-right: 24px;
+    border-radius: 10px;
+ }
+ .menu-buttons{
+    margin: 30px 30px;
+ }
+ .match{
+    margin-bottom: 30px;
+    background-color: white;
+    font-size: 20px;
+    font-weight: 600;
+ }
+ .group{
+    margin-bottom: 30px;
+    background-color: white;
+    font-size: 20px;
+    font-weight: 600;
+ }
+ .blog{
+    background-color: #DD0000;
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
+ }
+  .menu-buttons button a{
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+ }
+ .menu-buttons button{
+    width: 252px;
+    font-size: 20px;
+    padding: 17px 0;
+    border-radius: 10px;
+   }
+ .blogs{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 24px;
+    column-gap: 24px;
+ }
+ article{
+    width: 312px;
+    background-color: #F6F6F6;
+    border-radius: 10px;
+ }
+ .player-img{
+
+ }
+ .blogs-info{
+    margin: 20px;
+ }
+ .blogs-info button{
+    padding: 4px 16px;
+    border-radius: 5px;
+    margin-bottom: 15px;
+ }
+ .blogs-info p{
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 20px;
+ }
+ .player-time{
+    display: flex;
+ }
+ .player-time div{
+    margin-right: 20px;
  }
