--- a/style.css
+++ b/style.css
@@ -136,3 +136,39 @@ header{
  .player-time div{
     margin-right: 20px;
  }
+ /* footer styles starts here */
+ footer{
+     text-align: center;
+     background-color: black;
+     color: white;
+     height: 444px;
+     padding: 130px 0;
+ }
+ .footer-goal{
+    font-size: 40px;
+    font-weight: 600;
+    -top: 130px;
+  }
+  footer hr{
+    margin: 50px 140px;
+  }
+  .footer-links{
+    /* margin-bottom: 130px; */
+  }
+ .footer-links a{
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 500;
+    margin-right: 60px;
+    color: white;
+ }
+ .footer-icons{
+    margin-top: 100px;
+    
+ }
+ .footer-icons a{
+    text-decoration: none;
+    margin-right: 50px;
+    font-size: 35px;
+    color: white;
+ }
