--- a/style.css
+++ b/style.css
@@ -1,32 +1,52 @@
+/* common styles and utilites */
 body{
     font-family: 'Poppins', sans-serif;
     background-color: #EEEEEE;
  }
 
-header{ 
-    display: flex;
-    justify-content: center;
-    margin-bottom: 139px;
-  }
-.header-main{
-    display: flex;
-    width: 1321px;
-    height: 646px;
-    background-color: #161616;
-    color: #FFFFFF;
-    border-radius: 30px;
+ /* Responsive media screen styles starts here */
+/* for mobile */
+@media only screen and (max-width: 600px) {
+   
  }
-.header-titles{
-    margin-left: 106px;
-    margin-top: 102px;
+
+/* for mobile */
+  /* Responsive media screen styles ends here */
+header{
+   display: flex;
+   justify-content: center;
+   margin-bottom: 139px;
+    color: white;
 }
-.header-hading{
-    font-size: 70px;
-    font-weight: 700;
+.header-container{
+   display: flex;
+   border-radius: 30px;
+   background-color:  #161616;
+   width: 1321px;
+   height: 660px;
+ }
+.header-des{
+   width: 531px;
+   margin-top: 100px;
+   margin-left: 106px;
+   margin-right: 24px;
+}
+.header-title{
+    margin-bottom: 20px;
     line-height: 80px;
 }
-.watch-btn{
-    padding: 16px 25px;
+.header-title h1{
+   font-size: 70px;
+   font-weight: 700;
+}
+.header-pera{
+   margin-bottom: 30px;
+ }
+.header-btn{
+
+}
+.header-btn button{
+   padding: 16px 25px;
     background-color: #DD0000;
     color: #FFFFFF;
     border: none;
@@ -35,24 +55,14 @@ header{
     font-size: 20px;
     font-weight: 400;
 }
-.fa-regular{
-    margin-left: 10px;
-}
-.header-titles p{
-    margin-top: 20px;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 26px;
-}
 .header-banner{
-    width: 50%;
-    margin-top: 33px;
-    margin-right: 79px;
-    margin-left: 24px;
-  }
- .header-banner img{
-    width: 581px;
- }
+   width: 581px;
+   margin-top: 49px;
+   margin-right: 79px;
+}
+.header-banner img{
+   width: 100%;
+}
  /* header styles ends here */
  /* main blogs start here */
  
@@ -187,7 +197,9 @@ header{
     margin-top: 20px;
     margin-bottom: 53px;
  }
-
+.view-all{
+  text-align: center;
+}
 
  /* styles for upcoming match ends here */
   /* footer styles starts here */
