--- a/style.css
+++ b/style.css
@@ -249,6 +249,7 @@ header{
 @media only screen and (max-width: 688px) {
    header{
      flex-direction: column;
+     margin-bottom: 24px;
    }
    .header-container{
      flex-direction: column;
@@ -284,5 +285,46 @@ header{
    .header-banner img{
       width: 233px;
    }
+   /* menu styles starts  */
+   #main-blogs{
+      flex-direction: column;
+      margin-bottom: 0;
+   }
+   .all-cards{
+      flex-direction: column;
+      align-items: center;
+   }
+   .side-menu-card{
+      background-color: #EEEEEE;
+   }
+   .menu-buttons button{
+      border: none;
+     }
+     .match .group{
+      background-color: rgba(255, 255, 255, 0.747);
+     }
+     .blogs{
+      grid-template-columns: repeat(1, 1fr);
+     }
+
+     /* footer style starts here */
+     footer{
+      padding: 24px 0;
+     }
+     footer hr {
+      margin: 24px 20px;
+     }
+     .footer-links{
+      display: flex;
+      flex-direction: column;
+      margin-left: 60px;
+     }
+     .footer-links a{
+      margin-bottom: 10px;
+      }
+      .footer-icons{
+         margin-top: 30px;
+         margin-left: 55px;
+      }
 }
 /* for mobile */
