--- a/style.css
+++ b/style.css
@@ -348,4 +348,15 @@ footer hr{
       margin-top: 49px;
       margin-right: 79px;
    }
+   .all-cards{
+      flex-direction: column;
+      align-items: center;
+   }
+   .side-menu-card{
+      margin-right: 0;
+      background-color: white;
+      width: 826px;
+      height: 110px;
+      display: flex;
+   }
 }
