--- a/style.css
+++ b/style.css
@@ -329,6 +329,9 @@ footer hr{
 
 /* medium devices midea query */
 @media only screen and (min-width: 670px) and (max-width: 991.98px) {
+   header{
+      margin-bottom: 70px;
+   }
    .header-des{
       width: 316px;
       margin-top: 60px;
@@ -354,9 +357,29 @@ footer hr{
    }
    .side-menu-card{
       margin-right: 0;
-      background-color: white;
+      background-color: #EEEEEE;
       width: 826px;
       height: 110px;
       display: flex;
    }
+   .menu-buttons{
+      margin-left: 70px;
+   }
+   .menu-buttons a{
+      text-decoration: none;
+    }
+    .menu-buttons button{
+      width: 230px;
+    }
+    .blogs{
+      grid-template-columns: repeat(2, 1fr);
+      margin-top: 24px;
+      width: ;
+    } 
+    .none{
+      display: none;
+    }
+    .view-all button{
+      display: inline;
+    }
 }
