--- a/style.css
+++ b/style.css
@@ -32,10 +32,7 @@ header{
 }
 .header-pera{
    margin-bottom: 30px;
- }
-.header-btn{
-
-}
+ } 
 .header-btn button{
    padding: 16px 25px;
     background-color: #DD0000;
@@ -46,6 +43,11 @@ header{
     font-size: 20px;
     font-weight: 400;
 }
+.header-btn button:hover{
+   transform: scale(1.5);
+   transition: transform 2s ease-in-out;
+   trans
+}
 .header-banner{
    width: 581px;
    margin-top: 49px;
@@ -53,6 +55,11 @@ header{
 }
 .header-banner img{
    width: 100%;
+}
+
+header:hover .header-title{
+   transform: scale(1.2);
+   transition: transform 2s;
 }
  /* header styles ends here */
  /* main blogs start here */
